--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="container">
         <div class="nav">
           <div class="nav__logo">
-            <img src="/img/CallButton.svg" alt="CallButton" />
+            <img src="img/CallButton.svg" alt="CallButton" />
           </div>
           <div class="nav__tel">
             <a href="tel:+380976786678" class="navtelephone">(097)-67-86-678</a>
@@ -30,9 +30,9 @@
             <a href="">Delivery</a>
           </div>
           <div class="nav__iconmenu">
-            <a href=""><img src="/img/searchIcon.svg" alt="search" /></a>
-            <a href=""><img src="/img/cartIcon.svg" alt="search" /></a>
-            <a href=""><img src="/img/userIcon.svg" alt="search" /></a>
+            <a href=""><img src="img/searchIcon.svg" alt="search" /></a>
+            <a href=""><img src="img/cartIcon.svg" alt="search" /></a>
+            <a href=""><img src="img/userIcon.svg" alt="search" /></a>
           </div>
           <div class="nav__language"></div>
         </div>
@@ -43,8 +43,8 @@
       <div class="healthyfood">
         <div class="leftbar">
           <div class="lbtittle">
-            <img src="/img/Healthy.png" alt="Healthy" class="lbhealthy" />
-            <img src="/img/food.png" alt="food" class="lbfood" />
+            <img src="img/Healthy.png" alt="Healthy" class="lbhealthy" />
+            <img src="img/food.png" alt="food" class="lbfood" />
           </div>
           <div class="lbselect">
             <form action="">
@@ -61,7 +61,7 @@
                 <option value="3">третий вариант</option>
               </select>
               <button class="selectbutton">
-                <img src="/img/searchIcon.svg" alt="" />
+                <img src="img/searchIcon.svg" alt="" />
               </button>
             </form>
             <hr class="hrselect" />
@@ -72,7 +72,7 @@
             <h3 class="h3tittle">
               The<span> service in Kyiv</span>, for the delivery of healthy food.
             </h3>
-            <img src="/img/rbLogo.png" alt="logo" />
+            <img src="img/rbLogo.png" alt="logo" />
           </div>
         </div>
       </div>
@@ -85,47 +85,47 @@
         <div class="menu__menu">
           <div class="menu__cart">
             <a href=""
-              ><img src="/img/fish.svg" alt="" />
+              ><img src="img/fish.svg" alt="" />
               <p>Main courses</p></a
             >
           </div>
           <div class="menu__cart">
             <a href=""
-              ><img src="/img/coffee.svg" alt="" />
+              ><img src="img/coffee.svg" alt="" />
               <p>Tea & Coffee</p></a
             >
           </div>
           <div class="menu__cart">
             <a href=""
-              ><img src="/img/cake-slice.svg" alt="" />
+              ><img src="img/cake-slice.svg" alt="" />
               <p>Deserts</p></a
             >
           </div>
           <div class="menu__cart">
             <a href="">
-              <img src="/img/vegetables.svg" alt="" />
+              <img src="img/vegetables.svg" alt="" />
               <p>Salads</p></a
             >
           </div>
           <div class="menu__cart">
             <a href=""
-              ><img src="/img/cocktail.svg" alt="" />
+              ><img src="img/cocktail.svg" alt="" />
               <p>Fresh</p></a
             >
           </div>
           <div class="menu__cart">
             <a href=""
-              ><img src="/img/breakfast.svg" alt="" />
+              ><img src="img/breakfast.svg" alt="" />
               <p class="breakfast">Breakfast</p></a
             >
           </div>
         </div>
         <div class="bg__img">
           <div class="left">
-            <img src="/img/listik.svg" alt="" />
+            <img src="img/listik.svg" alt="" />
           </div>
           <div class="right">
-            <img src="/img/pomidoru.svg" alt="" />
+            <img src="img/pomidoru.svg" alt="" />
           </div>
         </div>
       </div>
@@ -135,7 +135,7 @@
       <div class="swiper-container">
         <div class="swiper-wrapper">
           <div class="cart swiper-slide">
-            <img src="/img/cart.png" alt="" />
+            <img src="img/cart.png" alt="" />
             <p class="tittle">Chia pudding with fruits</p>
             <p class="subtittle">
               Chia seeds, Mango, Coconut milk, Vanilla essence, Water, Fresh mint, Sugar.
@@ -144,12 +144,12 @@
               <p class="gramm">200 g</p>
               <p class="price">73 ₴</p>
               <a href="#" class="add-button">
-                <img src="/img/addButton.svg" alt="" />
+                <img src="img/addButton.svg" alt="" />
               </a>
             </div>
           </div>
           <div class="cart swiper-slide">
-            <img src="/img/cart.png" alt="" />
+            <img src="img/cart.png" alt="" />
             <p class="tittle">Chia pudding with fruits</p>
             <p class="subtittle">
               Chia seeds, Mango, Coconut milk, Vanilla essence, Water, Fresh mint, Sugar.
@@ -158,12 +158,12 @@
               <p class="gramm">200 g</p>
               <p class="price">73 ₴</p>
               <a href="#" class="add-button">
-                <img src="/img/addButton.svg" alt="" />
+                <img src="img/addButton.svg" alt="" />
               </a>
             </div>
           </div>
           <div class="cart swiper-slide">
-            <img src="/img/cart.png" alt="" />
+            <img src="img/cart.png" alt="" />
             <p class="tittle">Chia pudding with fruits</p>
             <p class="subtittle">
               Chia seeds, Mango, Coconut milk, Vanilla essence, Water, Fresh mint, Sugar.
@@ -172,12 +172,12 @@
               <p class="gramm">200 g</p>
               <p class="price">73 ₴</p>
               <a href="#" class="add-button">
-                <img src="/img/addButton.svg" alt="" />
+                <img src="img/addButton.svg" alt="" />
               </a>
             </div>
           </div>
           <div class="cart swiper-slide">
-            <img src="/img/cart.png" alt="" />
+            <img src="img/cart.png" alt="" />
             <p class="tittle">Chia pudding with fruits</p>
             <p class="subtittle">
               Chia seeds, Mango, Coconut milk, Vanilla essence, Water, Fresh mint, Sugar.
@@ -186,12 +186,12 @@
               <p class="gramm">200 g</p>
               <p class="price">73 ₴</p>
               <a href="#" class="add-button">
-                <img src="/img/addButton.svg" alt="" />
+                <img src="img/addButton.svg" alt="" />
               </a>
             </div>
           </div>
           <div class="cart swiper-slide">
-            <img src="/img/cart.png" alt="" />
+            <img src="img/cart.png" alt="" />
             <p class="tittle">Chia pudding with fruits</p>
             <p class="subtittle">
               Chia seeds, Mango, Coconut milk, Vanilla essence, Water, Fresh mint, Sugar.
@@ -200,12 +200,12 @@
               <p class="gramm">200 g</p>
               <p class="price">73 ₴</p>
               <a href="#" class="add-button">
-                <img src="/img/addButton.svg" alt="" />
+                <img src="img/addButton.svg" alt="" />
               </a>
             </div>
           </div>
           <div class="cart swiper-slide">
-            <img src="/img/cart.png" alt="" />
+            <img src="img/cart.png" alt="" />
             <p class="tittle">Chia pudding with fruits</p>
             <p class="subtittle">
               Chia seeds, Mango, Coconut milk, Vanilla essence, Water, Fresh mint, Sugar.
@@ -214,7 +214,7 @@
               <p class="gramm">200 g</p>
               <p class="price">73 ₴</p>
               <a href="#" class="add-button">
-                <img src="/img/addButton.svg" alt="" />
+                <img src="img/addButton.svg" alt="" />
               </a>
             </div>
           </div>
@@ -229,7 +229,7 @@
           <a href="#">Go to menu</a>
         </div>
         <div class="img_zelen">
-          <img src="/img/zelen.png" alt="" />
+          <img src="img/zelen.png" alt="" />
         </div>
       </div>
     </section>
@@ -242,7 +242,7 @@
         <div class="delivery_download">
           <div class="dl__left">
             <div class="img__number">
-              <img src="/img/dl1.png" alt="" />
+              <img src="img/dl1.png" alt="" />
             </div>
             <p class="download__tittle">Download and choose a dish</p>
             <p class="download__subtittle">
@@ -251,20 +251,20 @@
             </p>
             <div class="img__dwnload">
               <div class="img__phone">
-                <a href="#"><img src="/img/dliphone.png" alt="" /></a>
+                <a href="#"><img src="img/dliphone.png" alt="" /></a>
               </div>
               <div class="img__dwnld">
-                <a href="#"><img src="/img/dlappstore.png" alt="" /></a>
-                <a href="#"><img src="/img/dlgoggleplay.png" alt="" /></a>
+                <a href="#"><img src="img/dlappstore.png" alt="" /></a>
+                <a href="#"><img src="img/dlgoggleplay.png" alt="" /></a>
               </div>
             </div>
             <div class="cooking">
               <div class="cooking__head">
                 <div class="img__cooking">
-                  <img src="/img/dlpovar.png" alt="" />
+                  <img src="img/dlpovar.png" alt="" />
                 </div>
                 <div class="cooking__tittle">
-                  <img src="/img/dl3.png" alt="" />
+                  <img src="img/dl3.png" alt="" />
                   <p>Cooking</p>
                 </div>
               </div>
@@ -278,27 +278,27 @@
             </div>
             <div class="strelki">
               <div class="str1">
-                <img src="/img/dlstrelka1.png" alt="" />
+                <img src="img/dlstrelka1.png" alt="" />
               </div>
               <div class="str2">
-                <img src="/img/dlstrelka2.png" alt="" />
+                <img src="img/dlstrelka2.png" alt="" />
               </div>
               <div class="str3">
-                <img src="/img/dlstrelka3.png" alt="" />
+                <img src="img/dlstrelka3.png" alt="" />
               </div>
             </div>
           </div>
           <div class="dl__right">
             <div class="dl__bg-img">
-              <img src="/img/dllistik.png" alt="" />
+              <img src="img/dllistik.png" alt="" />
             </div>
             <div class="right__head">
               <div class="img__operator">
-                <img src="/img/dlgirl.png" alt="" />
+                <img src="img/dlgirl.png" alt="" />
               </div>
               <div class="order_proxessing">
                 <div class="op__tittle">
-                  <img src="/img/dl2.png" alt="" />
+                  <img src="img/dl2.png" alt="" />
                   <p>Order processing</p>
                 </div>
               </div>
